moved index.html

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="dist/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Kaleb Tsegaye</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../src/assets/img/profile-kaleb.jpg" width="300px" height="auto" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="src/assets/img/profile-kaleb.jpg" width="300px" height="auto" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -49,7 +49,7 @@
                     <div class="social-icons">
                         <a class="social-icon" target='_blank' href="https://www.linkedin.com/in/kaleb-tsegaye/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target='_blank' href="https://github.com/kalebts"><i class="fab fa-github"></i></a>
-                        <a target='_blank' href='../src/assets/KalebTsegayeResume.pdf'>Resume</a>
+                        <a target='_blank' href='src/assets/KalebTsegayeResume.pdf'>Resume</a>
                     </div>
                 </div>
             </section>
@@ -154,7 +154,7 @@
                     <h2 class="mb-5">Projects</h2>
                     <ul>
                         <div id='wrapper'>
-                            <img id='first' width="200px" height='auto' src='../src/assets/img/ads_A2_124.png'/>
+                            <img id='first' width="200px" height='auto' src='src/assets/img/ads_A2_124.png'/>
                             <div id='second'>
                                 <a target='_blank' href='https://github.com/kalebts/synth-param-estimator'><h4>Synth Parameter Estimator</h4></a>
                                 A Streamlit app that takes an audio sample of a synth being played as input, and provides predictions for basic waveforms and the amplitude envelope using several convolutional neural networks
@@ -162,7 +162,7 @@
                         </div>
                         <br>
                         <div id='wrapper'>
-                            <img id='first' width="200px" height='auto' src='../src/assets/img/pexels-pixabay-358636.jpg'/> 
+                            <img id='first' width="200px" height='auto' src='src/assets/img/pexels-pixabay-358636.jpg'/> 
                             <div id='second'> 
                                 <a target='_blank' href='https://github.com/kalebts/ames-ia-housing-analysis'><h4>Ames, Iowa Housing Analysis</h4></a>
                                 An analysis of the housing market in Ames, Iowa including data cleaning, exploratory data analysis, and multiple regression modeling, told through several Jupyter notebooks
@@ -170,7 +170,7 @@
                         </div>
                         <br>
                         <div id='wrapper'>
-                            <img id='first' width="200px" height='auto' src='../src/assets/img/GetARoomUMD.png'/>
+                            <img id='first' width="200px" height='auto' src='src/assets/img/GetARoomUMD.png'/>
                             <div id='second'> 
                                 <a target='_blank' href="https://github.com/kalebts/Get-a-Room-UMD"><h4>Get a Room UMD</h4></a>
                                 An interactive map made with the Javascript library LeafletJS that displays rooms in academic buildings that are not in use based on the University of Maryland’s class schedule
@@ -184,6 +184,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="dist/js/scripts.js"></script>
     </body>
 </html>
