two columns for skills

--- a/index.html
+++ b/index.html
@@ -127,24 +127,28 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages</div>
-                    <ul>
-                        <li>Python</li>
-                        <li>R</li>
-                        <li>HTML/CSS</li>
-                        <li>Javascript</li>
-                    </ul>
-                    <div class="subheading mb-3">Python Libraries</div>
-                    <ul>
-                        <li>Pandas</li>
-                        <li>Numpy</li>
-                        <li>Matplotlib</li>
-                        <li>Geopandas</li>
-                        <li>Scikit-learn</li>
-                        <li>Tensorflow</li>
-                        <li>Streamlit</li>
-                        <li>Selenium</li>
-                    </ul>
+                    <div id = 'first'>
+                        <div class="subheading mb-3">Programming Languages</div>
+                        <ul>
+                            <li>Python</li>
+                            <li>R</li>
+                            <li>HTML/CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                    </div>
+                    <div id="second">
+                        <div class="subheading mb-3">Python Libraries</div>
+                        <ul>
+                            <li>Pandas</li>
+                            <li>Numpy</li>
+                            <li>Matplotlib</li>
+                            <li>Geopandas</li>
+                            <li>Scikit-learn</li>
+                            <li>Tensorflow</li>
+                            <li>Streamlit</li>
+                            <li>Selenium</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
