--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data Science Fellow</h3>
-                            <div class="subheading mb-3">General Assembly</div>
-                            <p>Full-time program with regularly assigned projects covering statistics/machine learning concepts such as exploratory data analysis, regression analysis, natural language processing, and deep learning</p>
+                            <h3 class="mb-0">Data Associate</h3>
+                            <div class="subheading mb-3">Relentless</div>
+                            <ul>
+                                <li> Created automations in Zapier and utilized APIs to streamline the hiring process for community mobilizers</li>
+                                <li> Assessed data from platforms like Monday and Docusign to calculate compensation for mobilizers and investigate any issues in the hiring pipeline</li>
+                                <li> Set up dashboards in Google Data Studio to track the distribution of coaches/mobilizers in each program</li>
+                                <li> Managed spreadsheets that populated our relational organizing platform, Rally</li>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2022 - June 2022</span></div>
                     </div>
